fixed a bug related to z-index

--- a/common.css
+++ b/common.css
@@ -24,7 +24,7 @@ navbar {
     padding-right: 16px;
     position: fixed;
     top: 0;
-    z-index: 200;
+    z-index: 2000;
 
 }
 
